debug message layout issue in cyan2 css

--- a/public/css/meflat-cyan2.css
+++ b/public/css/meflat-cyan2.css
@@ -280,11 +280,11 @@ a:focus,
     letter-spacing:0.01em;
     text-transform:uppercase;
     background:transparent;
-    color:#fff; 
+    color:#fff;
 }
 
 #main-nav.scrolled .nav a{
-    color:inherit; 
+    color:inherit;
 }
 
 #main-nav li{
@@ -498,11 +498,11 @@ a:focus,
     text-decoration:none;
 }
 
-.flex-direction-nav a:hover {  
+.flex-direction-nav a:hover {
     background:#363B46;
 }
 
-.flex-direction-nav .flex-disabled {  
+.flex-direction-nav .flex-disabled {
     display:none;
 }
 
@@ -511,7 +511,7 @@ a:focus,
 
 /*----------------------
 -----Services Styles----
-------------------------*/  
+------------------------*/
 .services .item {
     text-align:center;
     margin-bottom:30px;
@@ -541,7 +541,7 @@ a:focus,
 }
 /*----------------------
 -----Featured Project----
-------------------------*/  
+------------------------*/
 .img-wrapper {
     position:relative;
     width:100%;
@@ -584,7 +584,7 @@ a:focus,
 
 /*----------------------
 -----About Styles----
-------------------------*/  
+------------------------*/
 
 #about .section-header{
     margin-bottom:40px;
@@ -642,14 +642,14 @@ a:focus,
 
 /*----------------------
 -----Portfolio Styles----
-------------------------*/ 	
+------------------------*/
 #filter-works ul {
     list-style:none;
     padding:0;
     margin:0;
     margin-bottom:40px;
     text-align:center;
-    
+
 }
 
 #filter-works ul li{
@@ -811,8 +811,8 @@ a:focus,
       -ms-transition-duration: 0.7s;
        -o-transition-duration: 0.7s;
           transition-duration: 0.7s;
-          
-   transition-timing-function:ease-in-out;    
+
+   transition-timing-function:ease-in-out;
 }
 
 .masonry {
@@ -920,7 +920,7 @@ a:focus,
 
 .modal-body .project-descr{
     margin:0 0 24px;
-    
+
 }
 
 .modal-header .loader {
@@ -1005,7 +1005,7 @@ a:focus,
 }
 /*----------------------
 -----Dribbble Styles----
-------------------------*/    
+------------------------*/
 .dribbble-button {
     display:block;
     text-align:center;
@@ -1064,9 +1064,8 @@ a:focus,
     .bl_form {
       margin: 0 0 40px;
     }
-    
-    .bl_form input,
-    .bl_form textarea{
+
+		.bl_form input{
       padding-top: 15px;
       background: rgba(255,255,255,0.10);
       box-shadow: 0 2px 8px rgba(0,0,0,0.2);
@@ -1078,6 +1077,24 @@ a:focus,
       width:207px;
       max-width:207px;
       min-width:207px;
+      padding: 10px 15px;
+      border-radius: 25px;
+      font-size: 16px;
+      outline: none;
+      vertical-align:middle;
+    }
+
+    .bl_form textarea{
+      padding-top: 15px;
+      background: rgba(255,255,255,0.10);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      border: none;
+      color: white;
+      height:240px;
+      max-height:240px;
+      width:650px;
+      max-width:650px;
+      min-width:650px;
       padding: 10px 15px;
       border-radius: 25px;
       font-size: 16px;
@@ -1106,7 +1123,7 @@ a:focus,
       color: #FFF;
 	  z-index:1;
     }
-	
+
 .no-placeholder .lb_label {
 	display:none;
 }
@@ -1145,7 +1162,7 @@ a:focus,
 }
 /*----------------------
 -----Footer Styles------
-------------------------*/    
+------------------------*/
 
 #main-footer p{
     font-size:16px;
@@ -1333,13 +1350,13 @@ a:focus,
 
 /*----------------------
 -----Media Queries------
-------------------------*/    
+------------------------*/
 @media (max-width: 767px) {
-	
+
     .navbar {
         padding:0 20px;
     }
-    
+
     #main-nav {
         background:#fff;
         box-shadow:0 1px 2px rgba(0,0,0,0.1);
@@ -1349,36 +1366,36 @@ a:focus,
 		display:block;
         text-align:center;
 	}
-	
+
 	#main-nav .nav a:before {
 		display:none;
 	}
-	
+
 	#main-nav .navbar-nav #logo{
 		display:none;
 	}
-	
+
     #main-nav .nav a{
-        color:inherit; 
+        color:inherit;
         transition:color .2s ease-out;
     }
 
 	#main-nav .nav .active a,
 	#main-nav .nav a:hover{
-        color:#8AAAD9; 
+        color:#8AAAD9;
     }
-    
+
     .jumbotron .text-col{
         text-align:center;
         margin-bottom:30px;
         margin-top:0;
     }
-    
+
     #main-footer [class*=row],
     #main-footer .text-right{
         text-align:center;
     }
-    
+
     .section-header h1{
         font-size:38px;
     }
